修改 统计行数 功能